# sentiment-analysis-market

./: .gitignore  data_fetching_.py  main.py  model.py  model_.py  pyproject.toml
corpus/: financial_corpus.json
data_retrieval/: data_fs_news_api.py  data_fs_reddit_api.py
news_data/: app_data.json
scripts/: dataset.py
